// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users routes GET /:id can get user by id 1`] = `
{
  "createdAt": "1970-01-01T00:00:00.010Z",
  "displayName": "Crasken",
  "id": "E21K9jm",
  "username": "crasken",
}
`;

exports[`users routes GET /me can get current user 1`] = `
{
  "createdAt": "1970-01-01T00:00:00.010Z",
  "displayName": "Crasken",
  "id": "E21K9jm",
  "username": "crasken",
}
`;

exports[`users routes GET /username/:username can get user by username 1`] = `
{
  "createdAt": "1970-01-01T00:00:00.010Z",
  "displayName": "Crasken",
  "id": "E21K9jm",
  "username": "crasken",
}
`;

exports[`users routes POST / can create a user 1`] = `
{
  "displayName": "Crasken",
  "id": "E21K9jm",
  "username": "crasken",
}
`;

exports[`users routes POST / can create a user 2`] = `
{
  "displayName": "Crasken",
  "id": 1,
  "over18": false,
  "sub": "google-oauth2|116644327347918921624",
  "username": "crasken",
}
`;

exports[`users routes POST /update can update a user 1`] = `
{
  "displayName": "Brasken",
  "id": "E21K9jm",
  "username": "brasken",
}
`;

exports[`users routes POST /update can update a user 2`] = `
{
  "displayName": "Brasken",
  "id": 1,
  "over18": false,
  "sub": "google-oauth2|116644327347918921624",
  "username": "brasken",
}
`;
